<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.4</version>
  </parent>

  <groupId>boluo</groupId>
  <artifactId>cloudvideoclips</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>cloudvideoclip</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>17</maven.compiler.release>
    <javacv.version>1.5.9</javacv.version>
    <system.javacv.env>windows-x86_64</system.javacv.env>
  </properties>

  <profiles>
    <profile>
      <id>window</id>
      <properties>
        <system.javacv.env>windows-x86_64</system.javacv.env>
      </properties>
      <dependencies>
        <dependency>
          <groupId>org.bytedeco</groupId>
          <artifactId>videoinput</artifactId>
          <version>0.200-${javacv.version}</version>
          <classifier>${system.javacv.env}</classifier>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <id>linux</id>
      <properties>
        <system.javacv.env>linux-x86_64</system.javacv.env>
      </properties>
    </profile>
  </profiles>

  <dependencyManagement>

  </dependencyManagement>

  <dependencies>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
      <exclusions>
        <exclusion>
          <artifactId>slf4j-api</artifactId>
          <groupId>org.slf4j</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-aop</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.retry</groupId>
      <artifactId>spring-retry</artifactId>
    </dependency>

    <dependency>
      <groupId>org.redisson</groupId>
      <artifactId>redisson-spring-boot-starter</artifactId>
      <version>3.30.0</version>
      <exclusions>
        <exclusion>
          <artifactId>redisson-spring-data-32</artifactId>
          <groupId>org.redisson</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.redisson</groupId>
      <artifactId>redisson-spring-data-20</artifactId>
      <version>3.30.0</version>
    </dependency>

    <dependency>
      <groupId>cn.hutool</groupId>
      <artifactId>hutool-core</artifactId>
      <version>5.8.16</version>
    </dependency>

    <dependency>
      <groupId>cn.hutool</groupId>
      <artifactId>hutool-json</artifactId>
      <version>5.8.16</version>
    </dependency>

    <dependency>
      <groupId>com.aliyun.oss</groupId>
      <artifactId>aliyun-sdk-oss</artifactId>
      <version>3.18.1</version>
    </dependency>

    <dependency>
      <groupId>javax.xml.bind</groupId>
      <artifactId>jaxb-api</artifactId>
      <version>2.3.1</version>
    </dependency>

    <dependency>
      <groupId>javax.activation</groupId>
      <artifactId>activation</artifactId>
      <version>1.1.1</version>
    </dependency>

    <dependency>
      <groupId>org.glassfish.jaxb</groupId>
      <artifactId>jaxb-runtime</artifactId>
      <version>2.3.3</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.30</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>javacv</artifactId>
      <version>${javacv.version}</version>
      <exclusions>
        <exclusion>
          <artifactId>javacpp</artifactId>
          <groupId>org.bytedeco</groupId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>javacpp</artifactId>
      <version>${javacv.version}</version>
      <classifier>${system.javacv.env}</classifier>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>ffmpeg</artifactId>
      <version>6.0-${javacv.version}</version>
      <classifier>${system.javacv.env}</classifier>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>artoolkitplus</artifactId>
      <version>2.3.1-${javacv.version}</version>
      <classifier>${system.javacv.env}</classifier>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>flycapture</artifactId>
      <version>2.13.3.31-${javacv.version}</version>
      <classifier>${system.javacv.env}</classifier>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>leptonica</artifactId>
      <version>1.83.0-${javacv.version}</version>
      <classifier>${system.javacv.env}</classifier>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>libdc1394</artifactId>
      <version>2.2.6-${javacv.version}</version>
      <classifier>${system.javacv.env}</classifier>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>libfreenect</artifactId>
      <version>0.5.7-${javacv.version}</version>
      <classifier>${system.javacv.env}</classifier>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>libfreenect2</artifactId>
      <version>0.2.0-${javacv.version}</version>
      <classifier>${system.javacv.env}</classifier>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>librealsense</artifactId>
      <version>1.12.4-${javacv.version}</version>
      <classifier>${system.javacv.env}</classifier>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>librealsense2</artifactId>
      <version>2.53.1-${javacv.version}</version>
      <classifier>${system.javacv.env}</classifier>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>openblas</artifactId>
      <version>0.3.23-${javacv.version}</version>
      <classifier>${system.javacv.env}</classifier>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>opencv</artifactId>
      <version>4.7.0-${javacv.version}</version>
      <classifier>${system.javacv.env}</classifier>
    </dependency>

    <dependency>
      <groupId>org.bytedeco</groupId>
      <artifactId>tesseract</artifactId>
      <version>5.3.1-${javacv.version}</version>
      <classifier>${system.javacv.env}</classifier>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <finalName>${project.artifactId}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
</project>
